src/features/formatting/snapshots/texlab__features__formatting__bibtex_internal__tests__multiple_entries.snap
---
source: src/features/formatting/bibtex_internal.rs
expression: edit.new_text

---
@article{foo,
	bar = {Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
	       dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,
	       consectetur adipiscing elit.},
}
@article{foo,
	bar = {Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum
	       dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,
	       consectetur adipiscing elit.},
}

