src/features/formatting/snapshots/texlab__features__formatting__bibtex_internal__tests__preamble.snap
---
source: src/features/formatting/bibtex_internal.rs
expression: edit.new_text

---
@preamble{"foo bar baz"}
